force-app/main/default/objects/MyDocsFile__c/MyDocsFile__c.object-meta.xml
<CustomObject>
    <label>MyDocs File</label>
    <nameField>
        <label>MyDocs file</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyDocs Files</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>