force-app/main/default/objects/MyDocsFile__c/fields/ContentSize__c.field-meta.xml
<CustomField>
    <fullName>ContentSize__c</fullName>
    <label>ContentSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>