force-app/main/default/objects/MyDocsFile__c/fields/FileExtension__c.field-meta.xml
<CustomField>
    <fullName>FileExtension__c</fullName>
    <label>Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>