force-app/main/default/objects/MyDocsFile__c/fields/FileUrl__c.field-meta.xml
<CustomField>
    <fullName>FileUrl__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>File Url</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>