force-app/main/default/objects/MyDocsFile__c/fields/Ordonnance__c.field-meta.xml
<CustomField>
    <fullName>Ordonnance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordonnance</label>
    <referenceTo>Ordonnance__c</referenceTo>
    <relationshipLabel>MyDocs Files</relationshipLabel>
    <relationshipName>MyDocsFiles</relationshipName>
    <type>Lookup</type>
</CustomField>