force-app/main/default/objects/MyDocsFile__c/fields/Taille__c.field-meta.xml
<CustomField>
    <fullName>Taille__c</fullName>
    <formula>IF((ContentSize__c &lt; 1024),
TEXT(ContentSize__c) + &apos; Bytes&apos;,
IF((ContentSize__c &gt;= 1024 &amp;&amp; ContentSize__c &lt; (1024*1024)),
TEXT(ROUND(ContentSize__c / 1024, 2)) + &apos; KB&apos;,
IF((ContentSize__c &gt;= (1024*1024) &amp;&amp; ContentSize__c &lt; (1024*1024*1024)),
TEXT(ROUND(ContentSize__c / (1024*1024), 2)) + &apos; MB&apos;,
TEXT(ROUND(ContentSize__c / (1024*1024*1024), 2)) + &apos; GB&apos;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taille</label>
    <type>Text</type>
</CustomField>